# GTestIntegration

./: .bashrc  .gitignore  LICENSE  README.md  ToDo.md
Projects/GMock/: CMakeLists.txt
Projects/GMock/include/: calculator.hpp  math_service.hpp
Projects/GMock/src/: math_service.cpp
Projects/GMock/tests/: test_math_service.cpp
Projects/Monitor/: CMakeLists.txt  Makefile  README.md
Projects/Monitor/src/: main.c  utils.c
Projects/Monitor/tests/: CMakeLists.txt  test_main.cpp
Projects/SimpleCppTest/: CMakeLists.txt  mock_example.cpp  sample.html  src_mock_example.cpp  test_example  test_example.cpp  test_suite2.cpp  xml_html_conv.py
